// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Link control data { type: 'CALL_PHONE', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "tel:555-555-5555",
}
`;

exports[`Page Link control data { type: 'CALL_PHONE', payload: [Object] }: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "phoneNumber": "555-555-5555",
                  },
                  "type": "CALL_PHONE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data { type: 'OPEN_URL', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "https://example.com",
  "target": "_self",
}
`;

exports[`Page Link control data { type: 'OPEN_URL', payload: [Object] }: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "url": "https://example.com",
                  },
                  "type": "OPEN_URL",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data { type: 'SCROLL_TO_ELEMENT', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data { type: 'SCROLL_TO_ELEMENT', payload: [Object] }: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data { type: 'SEND_EMAIL', payload: [Object] }: resolvedValue 1`] = `
{
  "href": "mailto:bob@gmail.com?subject=hello&body=world",
}
`;

exports[`Page Link control data { type: 'SEND_EMAIL', payload: [Object] }: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "body": "world",
                    "subject": "hello",
                    "to": "bob@gmail.com",
                  },
                  "type": "SEND_EMAIL",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data OPEN_PAGE fetches pathname slice when not in cache: resolvedValue 1`] = `
{
  "href": "/fake-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE fetches pathname slice when not in cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "fake-page-id",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data OPEN_PAGE renders page link when page pathname slice is in cache: resolvedValue 1`] = `
{
  "href": "/fake-pathname",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE renders page link when page pathname slice is in cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "PagePathnameSlice": [
      {
        "id": "fake-page-id",
        "value": {
          "__typename": "PagePathnameSlice",
          "id": "fake-page-id",
          "pathname": "fake-pathname",
        },
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "fake-page-id",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data OPEN_PAGE resolves default link attributes when unable to find pathname slice: resolvedValue 1`] = `
{
  "href": "#",
  "target": "_self",
}
`;

exports[`Page Link control data OPEN_PAGE resolves default link attributes when unable to find pathname slice: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "PagePathnameSlice": [
      {
        "id": "fake-page-id",
        "value": null,
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "openInNewTab": false,
                    "pageId": "fake-page-id",
                  },
                  "type": "OPEN_PAGE",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves default link attributes when elementIdConfig is not provided: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves default link attributes when elementIdConfig is not provided: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves scroll target when element key is on screen: resolvedValue 1`] = `
{
  "href": "#fake-element-id",
}
`;

exports[`Page Link control data SCROLL_TO_ELEMENT resolves scroll target when element key is on screen: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "payload": {
                    "block": "start",
                    "elementIdConfig": {
                      "elementKey": "key",
                      "propName": "prop",
                    },
                  },
                  "type": "SCROLL_TO_ELEMENT",
                },
              },
              "type": "TestComponent",
            },
            {
              "key": "key",
              "props": {
                "id": "fake-element-id",
              },
              "type": "./components/Button/index.js",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Link control data null: resolvedValue 1`] = `
{
  "href": "#",
}
`;

exports[`Page Link control data null: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": null,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;
